playbooks/yaml/argocd-apps/threadfin/deployment.yaml
# playbooks/yaml/argocd-apps/threadfin/deployment.yaml
# Deployment for Threadfin using lscr.io/linuxserver/threadfin:1.0.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threadfin
  namespace: media
  labels:
    app: threadfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: threadfin
  template:
    metadata:
      labels:
        app: threadfin
        component: main
    spec:
      containers:
        - name: threadfin
          image: lscr.io/linuxserver/threadfin:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 34400
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: threadfin-config
